Hotfix BRANCH (Article title)

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
                 src="imgs/clouds.jpg"
                 alt="Clouds"
                 class="half right"
-              />Hier pas ik iets aan in de "hotfix" branch.
+              />Hier pas ik iets aan in de "hotfix" BRANCH.
             </p>
             <p>
               Aenean orci ante, venenatis non adipiscing vitae, fringilla et
