--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="vviewport" content="width=device-width" />
     <title>Demo-site DWW2</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="sstyles.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -19,7 +19,7 @@
             <li><a href="#">Contact Us</a></li>
           </ul>
         </nav>
-        <h1>CSS3: The Missing Manual</h1>
+        <h1>CSS3: The Misssing Manual</h1>
       </header>
       <div class="contentWrapper">
         <div class="columnWrapper">
@@ -31,7 +31,12 @@
                 src="imgs/clouds.jpg"
                 alt="Clouds"
                 class="half right"
-              />Hier pas ik iets aan in de "hotfix" BRANCH.
+              />Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante
+              quis felis fringilla condimentum. Aenean orci ante, venenatis non
+              adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
+              luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
+              tortor. Suspendisse vitae quam lorem, in tempus velit. Sed vitae
+              ante quis felis fringilla condimentum.
             </p>
             <p>
               Aenean orci ante, venenatis non adipiscing vitae, fringilla et
