--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="vviewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
     <title>Demo-site DWW2</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
@@ -16,10 +16,10 @@
             <li><a href="#">CSS Properties</a></li>
             <li><a href="#">CSS Tips</a></li>
             <li><a href="#">CSS Gotchas</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contacteer ons</a></li>
           </ul>
         </nav>
-        <h1>CSS3: The Missing Manual</h1>
+        <h1>CSS3: The Misssing Manual</h1>
       </header>
       <div class="contentWrapper">
         <div class="columnWrapper">
@@ -31,7 +31,12 @@
                 src="imgs/clouds.jpg"
                 alt="Clouds"
                 class="half right"
-              />Hier pas ik iets aan in de "feature" branch
+              />Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante
+              quis felis fringilla condimentum. Aenean orci ante, venenatis non
+              adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
+              luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
+              tortor. Suspendisse vitae quam lorem, in tempus velit. Sed vitae
+              ante quis felis fringilla condimentum.
             </p>
             <p>
               Aenean orci ante, venenatis non adipiscing vitae, fringilla et
@@ -119,7 +124,11 @@
             <li>Fringilla et neque</li>
           </ul>
           <p>
-            ier pas ik iets aan in de "feature" branch
+            Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
+            felis fringilla condimentum. Aenean orci ante, venenatis non
+            adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
+            luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
+            tortor.Suspendisse vitae quam lorem, in tempus velit.
           </p>
           <p><img src="imgs/mule.jpg" alt="Mule" /></p>
           <p>
