--- a/www/index.html
+++ b/www/index.html
@@ -124,11 +124,7 @@
             <li>Fringilla et neque</li>
           </ul>
           <p>
-            Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
-            felis fringilla condimentum. Aenean orci ante, venenatis non
-            adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
-            luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
-            tortor.Suspendisse vitae quam lorem, in tempus velit.
+            Hier pas ik mijn Hotfix branch aan.
           </p>
           <p><img src="imgs/mule.jpg" alt="Mule" /></p>
           <p>
