--- a/www/index.html
+++ b/www/index.html
@@ -31,25 +31,13 @@
                 src="imgs/clouds.jpg"
                 alt="Clouds"
                 class="half right"
-              />Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante
-              quis felis fringilla condimentum. Aenean orci ante, venenatis non
-              adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
-              luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
-              tortor. Suspendisse vitae quam lorem, in tempus velit. Sed vitae
-              ante quis felis fringilla condimentum.
+              />hier niets
             </p>
             <p>
-              Aenean orci ante, venenatis non adipiscing vitae, fringilla et
-              neque. In pharetra, eros imperdiet luctus imperdiet, nunc sem
-              pharetra mi, vel faucibus elit risus id tortor.
+              nog niets
             </p>
             <p>
-              Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
-              felis fringilla condimentum. Aenean orci ante, venenatis non
-              adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
-              luctus imperdiet, nunc sem pharetra mi, vel faucibus elit risus id
-              tortor. Suspendisse vitae quam lorem, in tempus velit. Sed vitae
-              ante quis felis fringilla condimentum.
+             en nog ne keer niets
             </p>
             <h3>
               <img
